# tana-local-kb

./: .gitignore  CLAUDE.md  DATABASE_SCHEMA_GUIDE.md  DATABASE_TESTS_SUMMARY.md  LICENSE  README.md  WARP.md  bunfig.toml  package.json  pyproject.toml  tsconfig.json  vite.config.ts
client/: index.html
data/: tana-kb-dev.db-shm  tana-kb-dev.db-wal
data/samples/: README.md
scripts/: benchmark.ts  db-inspect.ts  migrate.ts  test-database.ts  test-parser.ts
server/: tsconfig.json
server/src/: index.ts
server/src/database/: README.md  index.ts
server/src/database/config/: connection.ts  environment.ts  index.ts  settings.ts
server/src/database/operations/: batch.ts  edges.ts  index.ts  nodes.ts  references.ts  transactions.ts
server/src/database/queries/: graph-traversal.ts  index.ts  search.ts
server/src/database/schema/: definitions.ts  index.ts  indexes.ts  (+1 more)
server/src/parser/: README.md  config.ts  factory.ts  index.ts  stream-parser.ts
test-reports/: database-test-report-2025-09-15T19-15-38-455Z.json
tests/database/: README.md  test-runner.ts
tests/database/benchmarks/: performance.test.ts
tests/database/config/: connection.test.ts
tests/database/operations/: batch.test.ts  edges.test.ts  nodes.test.ts
tests/database/queries/: graph-traversal.test.ts  search.test.ts
tests/database/schema/: migrations.test.ts
tests/parser/: README.md  edge-cases.test.ts  integration.test.ts  memory-validation.test.ts  memory.test.ts  node-processor.test.ts  performance.test.ts  system-node-filter.test.ts  test-data-generator.ts  test-runner.ts
(+14 files in other folders)
